<resources>
    <string name="app_name">Linio</string>
    <string name="slogan">Innovative Task Managing</string>
    <string name="panels_nav">Panels</string>
    <string name="home_nav">Home</string>
    <string name="email_hint">Email:</string>
    <string name="password_hint">Password:</string>
    <string name="login">LOGIN</string>
    <string name="createAccount">No account yet? Create one</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_out">Log Out</string>
    <string name="board_placeholder">BOARD PLACEHOLDER...</string>
    <string name="create_panel">Create Panel</string>
    <string name="panel_name">Panel name</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_menu">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send">Send</string>
    <string name="title_placeholder">Title</string>
    <string name="panel_title_placeholder">Panel Title Placeholder...</string>
    <string name="panel_placeholder">Panel Placeholder...</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="description_placeholder">Description *optional</string>
    <string name="queue">Queue</string>
    <string name="add_task">ADD TASK</string>
    <string name="task_placeholder">Task Placeholder...</string>
    <string name="edit_description">Edit description...</string>
    <string name="due_date_mm_dd_yyyy">Add due date</string>
    <string name="checklist">Checklist:</string>
    <string name="subtask_placeholder">Subtask Placeholder...</string>
    <string name="edit_task">Edit</string>
    <string name="move_to_in_progress">In Progress</string>
    <string name="move_to_complete">Complete</string>
    <string name="remove_task">Remove</string>
    <string name="move_to_queue">Queue</string>
    <string name="upload_icon">Upload Icon</string>
    <string name="change_icon">Change Icon</string>
    <string name="future_updates_to_come">Future Updates To Come</string>
    <string name="home_placeholder">HOME PLACEHOLDER...</string>
    <string name="about">About Us</string>
    <string name="who_is_linio">Who is...</string>
    <string name="quote">A quote by Pablo Picasso states; “Our goals can only be reached through a vehicle of a plan, in which we must fervently believe, and upon which we must vigorously act. There is no other route to success” (Pogue, 2019). Having a well-rounded and conceptionally organized set of plans to analyze and define the scope of one’s future is undoubtably essential for a path to success and accomplishment. Here a Linio, our primary agenda is to provide users with the ability to seek out this effort by creating limitless task boards to organize one\'s schedule and become the most production individual possible!</string>
    <string name="project_source">Project Source:</string>
    <string name="have_any_questions">Have any questions?</string>
    <string name="penrod_christian7984_gmail_com">penrod.christian7984@gmail.com</string>
    <string name="https_github_com_christianpen7984_linio_app_git">https://github.com/ChristianPen7984/Linio_App.git</string>
    <string name="warning">WARNING!</string>
    <string name="check_item">Check Item</string>
</resources>
