<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:background="@color/colorPrimaryDark" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/task_placeholder"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:background="@drawable/task_input"
        android:hint="@string/edit_description"
        android:gravity="top"
        android:padding="5dp"/>

    <EditText
        android:id="@+id/dueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/task_input"
        android:hint="@string/due_date_mm_dd_yyyy"
        android:padding="5dp"/>

    <RelativeLayout
        android:layout_below="@+id/dueDate"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/task_input"
        android:padding="10dp">

        <TextView
            android:id="@+id/checklistTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="9dp"
            android:text="@string/checklist"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/taskList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/checklistTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp">

        </ListView>


    </RelativeLayout>

</RelativeLayout>