<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="205dp"
            android:layout_height="148dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="70dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginLogo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/repeat-password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/repeat_password_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/repeat-password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login"
            android:padding="20dp"
            android:text="@string/sign_up"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>